[gd_scene load_steps=14 format=3 uid="uid://bwqm7jufoed7b"]

[ext_resource type="Script" uid="uid://dxujv3plw3gh8" path="res://ui/shop.gd" id="1_1slnd"]
[ext_resource type="Texture2D" uid="uid://d25r7ah5uv4vl" path="res://assets/sprites/background/shop_background.jpg" id="1_foe6g"]
[ext_resource type="Texture2D" uid="uid://c8pr57efekt5l" path="res://assets/ui/close_button.png" id="2_2v8nf"]
[ext_resource type="Texture2D" uid="uid://cb6xdxcj7gp0" path="res://assets/sprites/hooks/default.png" id="4_67uj7"]
[ext_resource type="Texture2D" uid="uid://dbqvpsqgyiace" path="res://assets/sprites/icons/profile_exp.png" id="5_qxnrq"]
[ext_resource type="Texture2D" uid="uid://ejc2v3gtfytb" path="res://assets/sprites/fishermans/boat.png" id="6_i5mka"]
[ext_resource type="PackedScene" uid="uid://g1lnxers4xc4" path="res://ui/hooks_shop_panel.tscn" id="7_qxnrq"]
[ext_resource type="PackedScene" uid="uid://dktou66amwa86" path="res://ui/boats_shop_panel.tscn" id="8_i5mka"]

[sub_resource type="Animation" id="Animation_fovme"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HooksPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HooksPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BoatsPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BoatsPanel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i5mka"]
resource_name = "boats"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HooksPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BoatsPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BoatsPanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_773qs"]
resource_name = "hooks"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HooksPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HooksPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BoatsPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tdjdk"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HooksPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6c2nj"]
_data = {
&"RESET": SubResource("Animation_fovme"),
&"boats": SubResource("Animation_i5mka"),
&"hooks": SubResource("Animation_773qs"),
&"idle": SubResource("Animation_tdjdk")
}

[node name="Shop" type="Control" node_paths=PackedStringArray("anim", "hooks_panel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1slnd")
anim = NodePath("AnimationPlayer")
hooks_panel = NodePath("HooksPanel")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_foe6g")
expand_mode = 1
stretch_mode = 6

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Close" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 40.0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 104.0
texture_normal = ExtResource("2_2v8nf")
texture_pressed = ExtResource("2_2v8nf")
texture_hover = ExtResource("2_2v8nf")
texture_focused = ExtResource("2_2v8nf")
ignore_texture_size = true
stretch_mode = 5

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Hooks" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = 208.0
offset_right = 63.0
offset_bottom = 381.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57079
texture_normal = ExtResource("4_67uj7")
texture_pressed = ExtResource("4_67uj7")
texture_hover = ExtResource("4_67uj7")
texture_disabled = ExtResource("4_67uj7")
texture_focused = ExtResource("4_67uj7")
ignore_texture_size = true
stretch_mode = 5

[node name="Acessories" type="TextureButton" parent="Buttons"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -216.0
offset_right = 40.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_qxnrq")
texture_pressed = ExtResource("5_qxnrq")
texture_hover = ExtResource("5_qxnrq")
ignore_texture_size = true
stretch_mode = 5

[node name="Boat" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.9999
offset_top = -7.99997
offset_right = 352.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.523598
texture_normal = ExtResource("6_i5mka")
texture_pressed = ExtResource("6_i5mka")
texture_hover = ExtResource("6_i5mka")
texture_disabled = ExtResource("6_i5mka")
ignore_texture_size = true
stretch_mode = 5

[node name="HooksPanel" parent="." instance=ExtResource("7_qxnrq")]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="BoatsPanel" parent="." instance=ExtResource("8_i5mka")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6c2nj")
}

[connection signal="button_down" from="Close" to="." method="_on_close_button_down"]
[connection signal="button_down" from="Buttons/Hooks" to="." method="_on_hooks_button_down"]
[connection signal="button_down" from="Buttons/Boat" to="." method="_on_boat_button_down"]
[connection signal="closed" from="HooksPanel" to="." method="_on_hooks_panel_closed"]
[connection signal="closed" from="BoatsPanel" to="." method="_on_boats_panel_closed"]
